--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -280,7 +280,8 @@ select:disabled {
     color: var(--input-border-error-color);
 }
 
-.error-message {
+.error-message,
+.alert-danger {
     color: #dc3545;
     font-size: 0.85rem;
     margin-top: 5px;
@@ -1096,7 +1097,7 @@ a.pagination-item:hover {
     padding: 0.5rem;
     font-size: 14px;
     border: 1px solid var(--primary-button-border-color);
-    /* border-radius: 1rem; */
+    border-radius: 1rem;
     text-decoration: none;
     font-weight: bold;
     margin-bottom: 0.1rem;
@@ -1109,13 +1110,16 @@ a.pagination-item:hover {
     bottom: 0;
     padding: 0.5rem;
     display: inline-block;
-    width: 80px;
+    width: 120px;
     font-weight: normal;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
     color: var(--text-color);
     transition: all 0.3s;
     cursor: pointer;
     background: transparent;
     border: none;
+    text-align: center;
 }
 
 .listing-details-phone-view:hover,
@@ -1977,7 +1981,8 @@ input#phone[readonly] {
     color: #b71c1c;
 }
 
-.status-closed-expired {
+.status-closed-expired,
+.status-quote-submitted {
     color: #fff;
     background-color: #e53e3e;
 }
